--- a/libs/css/index.css
+++ b/libs/css/index.css
@@ -254,12 +254,21 @@ header {
     border-radius: 5px;
 }
 
+.border-radius-10 {
+    border-radius: 10px;
+}
+
 .border-radius-15 {
     border-radius: 15px;
 }
 
 .border-radius-20 {
     border-radius: 20px;
+}
+
+.border-bottom-r-10 {
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
 }
 
 /* Modals */
@@ -306,4 +315,72 @@ header {
 
 .card-top-green {
     border-top: 3px solid #5CB85B;
+}
+
+.card-top-orange {
+    border-top: 3px solid orange;
+}
+
+.card-top-lightblue {
+    border-top: 3px solid #00C0EF;
+}
+
+/* Some Sizing */
+.w-100 {
+    width: 100% !important;
+}
+
+.h-65 {
+    height: 65vh !important;
+}
+
+@media only screen and (max-width:780px) {
+    .h-65 {
+        height: 30vh !important;
+    }
+}
+
+.w-70 {
+    width: 70% !important;
+}
+
+@media only screen and (min-width:780px) {
+    .w-md-20 {
+        width: 20% !important;
+        text-align: center;
+    }
+
+    .w-md-70 {
+        width: 70% !important;
+        text-align: center;
+    }
+
+    .w-md-50 {
+        width: 50% !important;
+        text-align: center;
+    }
+
+
+    .center-big {
+        text-align: center;
+    }
+}
+
+/* Labels */
+.input-field label {
+    color: #000;
+}
+
+/* Form Inputs */
+.input-field input[type=text]:focus+label {
+    color: #000;
+}
+
+.input-field input[type=text]:focus {
+    border-bottom: 1px solid #000;
+    box-shadow: 0 1px 0 0 #000;
+}
+
+.input-field .prefix.active {
+    color: #000;
 }
